# radarr-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/radarr/: add_movie_payload.rs  add_options.rs  alternative_title.rs  client.rs  config.rs  data_source.rs  error.rs  health_response.rs  image.rs  media_info.rs  mod.rs  movie_file.rs  movie_response.rs  ping_response.rs  quality.rs  quality_spec.rs  rating.rs  response.rs  revision.rs  root_folder_response.rs  search_result.rs  status_response.rs
