[package]
name = "radarr"
version = "0.1.0"
authors = ["Spike Grobstein <me@spike.cx>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
reqwest = "0.9.10"
url = "1.7.2"
# clap = "2.32.0"
alamo_movies = { git = "https://github.com/spikegrobstein/alamo-movies-rust.git", branch = "make-lib" }
serde = { version = "1.0.89", features = ["derive"] }
clap = "2.33.0"
